@@ -29,8 +29,8 @@
 // 20090617 - 2009-06-17aRagexeRE+ - 0x7d9
 // 20090922 - 2009-09-22aRagexeRE+ - 0x7e5, 0x7e7, 0x7e8, 0x7e9
 #ifndef PACKETVER
-	#define PACKETVER	20081126
-	//#define PACKETVER 20090922
+	//#define PACKETVER	20081126
+	#define PACKETVER 20090922
 #endif
 // backward compatible PACKETVER 8 and 9
 #if PACKETVER == 8
